--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="./resources/ol.css">
         <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link rel="stylesheet" type="text/css" href="resources/horsey.min.css">
+        <link rel="stylesheet" type="text/css" href="resources/ol-search-layer.min.css">
         <link href="resources/photon-geocoder-autocomplete.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
         <link rel="stylesheet" href="./resources/qgis2web.css">
@@ -16,18 +18,18 @@
             background-color: #ffffff;
         }
         .ol-control > * {
-            background-color: #ededed!important;
-            color: #8a8a8a!important;
+            background-color: #f8f8f8!important;
+            color: #444444!important;
             border-radius: 0px;
         }
         .ol-attribution a, .gcd-gl-input::placeholder, .search-layer-input-search::placeholder {
-            color: #8a8a8a!important;
+            color: #444444!important;
         }
         .search-layer-input-search {
-            background-color: #ededed!important;
+            background-color: #f8f8f8!important;
         }
         .ol-control > *:focus, .ol-control >*:hover {
-            background-color: rgba(237, 237, 237, 0.7)!important;
+            background-color: rgba(248, 248, 248, 0.7)!important;
         } 
         .ol-control {
             background-color: rgba(255,255,255,.4) !important;
@@ -55,6 +57,8 @@
         <script src="resources/qgis2web_expressions.js"></script>
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
+        <script src="resources/horsey.min.js"></script>
+        <script src="resources/ol-search-layer.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/photon-geocoder-autocomplete.min.js"></script>
         <script src="layers/_1.js"></script><script src="layers/_2.js"></script>
